bus delete
