# api/docs/swagger.yaml
@@ -230,6 +230,35 @@ paths:
       summary: GetAll bus
       tags:
       - bus
+  /v1/bus/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: API for deleting bus
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.SuccessModel'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ResponseError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ResponseError'
+      summary: Delete bus
+      tags:
+      - bus
   /v1/bus/reserve:
     post:
       consumes:
